# sepm-temp

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  Chat.h  ChatClientCallbackImpl.cpp  ChatClientCallbackImpl.h  client.cpp
protobuf/: AuthMsg.proto  AuthReply.proto  CMakeLists.txt  MessageEvent.proto
server/: AuthenticationImpl.cpp  AuthenticationImpl.h  CMakeLists.txt  Ice.cpp  Ice.h  SessionImpl.cpp  SessionImpl.h  SocketHandler.cpp  SocketHandler.h  ThreadHook.h  UserCallback.cpp  UserCallback.h  server.cpp
server/auth/: Auth.cpp  Auth.h  CMakeLists.txt
